[gd_scene load_steps=56 format=2]

[ext_resource path="res://Player/Atta5.png" type="Texture" id=1]
[ext_resource path="res://Player/Player2.gd" type="Script" id=2]
[ext_resource path="res://Atta_Detect/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/2Atta5.png" type="Texture" id=4]
[ext_resource path="res://Atta_Detect/Hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Effect/MagicFire.png" type="Texture" id=6]
[ext_resource path="res://Player/Run3.png" type="Texture" id=7]
[ext_resource path="res://Player/Run1.png" type="Texture" id=8]
[ext_resource path="res://Player/Run2.png" type="Texture" id=9]
[ext_resource path="res://Player/Run4.png" type="Texture" id=10]
[ext_resource path="res://Player/Idle.png" type="Texture" id=11]
[ext_resource path="res://Player/Run7.png" type="Texture" id=12]
[ext_resource path="res://Player/Run6.png" type="Texture" id=13]
[ext_resource path="res://Player/Run5.png" type="Texture" id=14]
[ext_resource path="res://Player/Run8.png" type="Texture" id=15]
[ext_resource path="res://Player/Brake1.png" type="Texture" id=16]
[ext_resource path="res://Player/Brake2.png" type="Texture" id=17]
[ext_resource path="res://Player/Brake3.png" type="Texture" id=18]
[ext_resource path="res://Player/Brake4.png" type="Texture" id=19]
[ext_resource path="res://Player/Brake5.png" type="Texture" id=20]
[ext_resource path="res://Player/Atta1.png" type="Texture" id=21]
[ext_resource path="res://Player/Atta2.png" type="Texture" id=22]
[ext_resource path="res://Player/Atta3.png" type="Texture" id=23]
[ext_resource path="res://Player/Atta4.png" type="Texture" id=24]
[ext_resource path="res://Player/Atta6.png" type="Texture" id=25]
[ext_resource path="res://Player/2Atta1.png" type="Texture" id=26]
[ext_resource path="res://Player/2Atta2.png" type="Texture" id=27]
[ext_resource path="res://Player/2Atta3.png" type="Texture" id=28]
[ext_resource path="res://Player/2Atta4.png" type="Texture" id=29]
[ext_resource path="res://Music_Sound/Attack.wav" type="AudioStream" id=30]
[ext_resource path="res://Enemy/Bat.png" type="Texture" id=31]
[ext_resource path="res://Player/Jump3.png" type="Texture" id=32]
[ext_resource path="res://Player/Jump4.png" type="Texture" id=33]
[ext_resource path="res://Player/Jump5.png" type="Texture" id=34]
[ext_resource path="res://Player/Jump1.png" type="Texture" id=35]
[ext_resource path="res://Player/Jump2.png" type="Texture" id=36]
[ext_resource path="res://Player/Jump6.png" type="Texture" id=37]
[ext_resource path="res://Enemy/Stats.tscn" type="PackedScene" id=38]
[ext_resource path="res://UI/HealthUI_Player2.gd" type="Script" id=39]
[ext_resource path="res://UI/The_energyUI.tscn" type="PackedScene" id=40]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 31 )
region = Rect2( 0, 0, 112, 170 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 31 )
region = Rect2( 112, 0, 112, 170 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 31 )
region = Rect2( 224, 0, 112, 170 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 31 )
region = Rect2( 336, 0, 112, 170 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 31 )
region = Rect2( 448, 0, 112, 170 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 1 ), ExtResource( 25 ) ],
"loop": true,
"name": "Atta1",
"speed": 13.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 4 ) ],
"loop": true,
"name": "Atta2",
"speed": 11.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "Idle",
"speed": 0.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 10 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 15 ) ],
"loop": true,
"name": "Run",
"speed": 15.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": false,
"name": "Brake",
"speed": 15.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Dodge",
"speed": 20.0
}, {
"frames": [ ExtResource( 35 ), ExtResource( 36 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 37 ) ],
"loop": false,
"name": "Jump",
"speed": 15.0
} ]

[sub_resource type="CapsuleShape2D" id=7]
radius = 24.108
height = 228.172

[sub_resource type="CapsuleShape2D" id=8]
radius = 185.97
height = 36.9281

[sub_resource type="CapsuleShape2D" id=9]
radius = 32.5754
height = 184.693

[sub_resource type="CanvasItemMaterial" id=10]
blend_mode = 1

[sub_resource type="Gradient" id=11]
colors = PoolColorArray( 0.415686, 0, 0.145098, 1, 0.968627, 0.227451, 0.227451, 0 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 11 )

[sub_resource type="Curve" id=13]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.265957 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=14]
curve = SubResource( 13 )

[sub_resource type="ParticlesMaterial" id=15]
emission_shape = 1
emission_sphere_radius = 5.0
flag_disable_z = true
gravity = Vector3( -5, -250, 1 )
angular_velocity = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 50.0
linear_accel_random = 0.7
damping = 2.0
scale = 0.4
scale_curve = SubResource( 14 )
color_ramp = SubResource( 12 )

[node name="Player2" type="KinematicBody2D"]
position = Vector2( 2.10696, 2.42731 )
z_index = 1
collision_layer = 16
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 4.27036, 6.11226 )
scale = Vector2( 0.615082, 0.615082 )
frames = SubResource( 6 )
animation = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -32.449, -2.36 )
shape = SubResource( 7 )

[node name="HitboxPivot" type="Position2D" parent="."]
position = Vector2( 9.53674e-07, 5.30593 )
rotation = -3.14159
scale = Vector2( 0.66324, 0.66324 )

[node name="PlayerHitbox" parent="HitboxPivot" instance=ExtResource( 3 )]
collision_mask = 4

[node name="CollisionShape2D" parent="HitboxPivot/PlayerHitbox" index="0"]
position = Vector2( -185.346, 45.0069 )
shape = SubResource( 8 )
disabled = true

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]
position = Vector2( -4.954, -0.123 )
scale = Vector2( 0.66324, 0.66324 )
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -40.4186, -6.25194 )
shape = SubResource( 9 )

[node name="WeaponPos" type="Position2D" parent="."]
position = Vector2( -96.3322, 77.7606 )

[node name="AttaTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="SoundEffect" type="Node2D" parent="."]

[node name="Attack" type="AudioStreamPlayer2D" parent="SoundEffect"]
stream = ExtResource( 30 )

[node name="WeaponEffect" type="KinematicBody2D" parent="."]
position = Vector2( -105.305, 73.5 )

[node name="Particles2D" type="Particles2D" parent="WeaponEffect"]
material = SubResource( 10 )
position = Vector2( 4.53913, 9.3371 )
amount = 50
lifetime = 1.3
local_coords = false
process_material = SubResource( 15 )
texture = ExtResource( 6 )

[node name="The_energyUI" parent="." instance=ExtResource( 40 )]
margin_left = -331.107
margin_top = -192.427
margin_right = -291.107
margin_bottom = -152.427
script = ExtResource( 39 )

[node name="EnergyUIEmpty" parent="The_energyUI" index="0"]
margin_right = 2682.0
stretch_mode = 1

[node name="icon" parent="The_energyUI" index="2"]
visible = false

[node name="Stats" parent="." instance=ExtResource( 38 )]
max_health = 10.0

[node name="Skill" type="Timer" parent="."]
wait_time = 2.0
autostart = true
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="AttaTimer" to="." method="_on_AttaTimer_timeout"]
[connection signal="timeout" from="Skill" to="." method="_on_Skill_timeout"]

[editable path="HitboxPivot/PlayerHitbox"]

[editable path="Hurtbox"]

[editable path="The_energyUI"]
